# backend

./: app.json  err-msg.json  gulpfile.js  package.json
config/: app.py  ba_agent.py  coder_agent.py  config.js  executor_agent.py  file_read_tool.py  file_write_tool.py  infra.md  jira_agent.py  jira_create_tool.py  orchestrator.py  pyproject.toml  supervisor_agent.py  user_agent.py
config/assets/: default.js  test.js
config/env/: default.js  development.js  production.js
config/lib/: express.js
modules/: app_controller.js  common.js
modules/config/controllers/: config.controller.js
modules/config/models/: config.model.js
modules/config/policies/: config.policy.js
modules/config/routes/: config.routes.js
modules/core/controllers/: core.controller.js  errors.controller.js
modules/core/routes/: core.routes.js
modules/pages/controllers/: pages.controller.js
modules/pages/routes/: pages.routes.js
modules/pages/templates/: contact-us-email.view.html~
modules/pages/validations/: pages.validations.js  pages.validations.js~
modules/projects/controllers/: articles.controller.js  projects.controller.js  services.controller.js  topics.controller.js
modules/projects/models/: article.model.js  project.model.js  service.model.js  topic.model.js
modules/projects/policies/: articles.policy.js  projects.policy.js  services.policy.js  topics.policy.js
modules/projects/routes/: article.routes.js  project.routes.js  service.routes.js  topics.routes.js
modules/users/config/strategies/: facebook.js  (+6 more)
modules/users/controllers/: admin.controller.js
modules/users/models/: user.model.js
modules/users/policies/: admin.policy.js
modules/users/routes/: admin.routes.js  auth.routes.js  users.routes.js
tests/: app.py  ba_agent.py  executor_agent.py  orchestrator.py  supervisor_agent.py  user_agent.py
(+5 files in other folders)
